fixed cart z-index

--- a/src/Volo/FrontendBundle/Resources/public/css/partial/cart.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/partial/cart.scss
@@ -73,7 +73,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 996;
+  z-index: 997;
   top: 0;
   left: 0;
   background-color: $color-bg-primary;
